logs/rstsandbox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/rstsandbox'...
Compiling './lib/python3.5/site-packages/rstsandbox/__init__.py'...
***   File "./lib/python3.5/site-packages/rstsandbox/__init__.py", line 31
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rstsandbox/amarsi'...
Listing './lib/python3.5/site-packages/rstsandbox/cbse'...
Listing './lib/python3.5/site-packages/rstsandbox/cogimon'...
Listing './lib/python3.5/site-packages/rstsandbox/communicationpatterns'...
Listing './lib/python3.5/site-packages/rstsandbox/devices'...
Listing './lib/python3.5/site-packages/rstsandbox/devices/flexirob'...
Listing './lib/python3.5/site-packages/rstsandbox/hri'...
Listing './lib/python3.5/site-packages/rstsandbox/kinematics'...
Listing './lib/python3.5/site-packages/rstsandbox/monitoring'...
Listing './lib/python3.5/site-packages/rstsandbox/robot'...
Listing './lib/python3.5/site-packages/rstsandbox/signalprocessing'...
Listing './lib/python3.5/site-packages/rstsandbox/vision'...
Listing './lib/python3.5/site-packages/rstsandbox-0.16.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
